applying css to widget_user_search search box elements

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -5016,3 +5016,9 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
 .enroll-act_lbl {
   color: #0c2944;
 }
+
+/* line 5214, ../../../scss/_clix2017.scss */
+.user-search-box-ele {
+  display: inline-block;
+  width: 30%;
+}
