added card wrapper for displaying cards horizontally

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/card_gsearch.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/card_gsearch.html
@@ -34,7 +34,7 @@
     {% endcomment %}
 
      <div class="unit_actions">
-            <span>actions content</span></a>
+            <span>{{node.id}}</span></a>
     </div>
   
     
