--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/sform.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/sform.html
@@ -24,11 +24,13 @@
 {% endfor %}
 
 <div>
-<ul id="card_row">
-{% for c in content %}
-	<li>{% include 'ndf/card_gsearch.html' with node=c %}</li>
-{% endfor %}
-</ul>
+	<ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
+		{% for c in content %}
+			<li class="card-image-wrapper">
+				{% include 'ndf/card_gsearch.html' with node=c %}
+			</li>
+		{% endfor %}
+	</ul>
 </div>
 
 <div class="pagination">
