generic width and margin defined classed added.

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -5211,7 +5211,21 @@ ul.nav_menu_1 {
     color: #0c2944;
 }
 
-.user-search-box-ele{
+
+.inline-block-display{
     display: inline-block;
-    width: 30%;
 }
+
+.push-to-right{
+  margin-left:10%;
+}
+
+.auto-width{
+    width: auto !important;
+}
+
+.widget-container{
+    width: 80%;
+}
+
+
