--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_user_search.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_user_search.html
@@ -15,8 +15,24 @@ table td{
 }
 
 </style>
+  <!-- Confirmation Seek Modal on Submit click -->
+  <div id="confirmUserSubscriptionModal" class="reveal-modal medium alert-box radius" data-reveal data-alert>
+    <p id="confirmUserSubscriptionModalLabel"></p>
+    <div class="row feeds_proceed">
+      <div class="small-3 small-offset-3 columns">
+        <input type="button" id="btnConfirmUserSubYes" class="button tiny expand" value={% trans "Yes" %}>
+      </div>
+      <div class="small-3 columns end">
+        <input type="button" id="btnConfirmUserSubNo" class="button tiny expand " value={% trans "No" %}>
+      </div>
+    </div>
+    <a class="close-reveal-modal">&#215;</a>
+  </div>
+
+
 <div class="row">
 
+  <!-- Info Box -->
   <div class="small-6 large-3 columns" style="margin-left: -6%">
     <div class="info-box hide" >
       <div class="row" >
@@ -40,6 +56,7 @@ table td{
   </div>
 
   <div class="small-6 large-9 columns widget-container">
+      <!-- Search Box -->
       <div class="search-box">
           <div class="inline-block-display auto-width" >
             <h4>{% trans 'Search User by name : ' %}</h4>
@@ -52,6 +69,7 @@ table td{
           </div>
       </div>
 
+      <!-- Search Result Box -->
       <div class="data-box">
         <div id="student_count_div"></div>
         <div id="student_data_set_div"></div>
@@ -65,7 +83,6 @@ table td{
 
 <script type="text/javascript">
   var search_text_old = "";
-  var stud_table;
   var mem_subscription_data = {'added': {}, 'removed': {}}
   var adm_subscription_data = {'added': {}, 'removed': {}}
 
@@ -86,6 +103,21 @@ table td{
       cell3.innerHTML = "<b>Member</b><br/> <input type='checkbox' class='select-mem'> Select All "
       cell4.innerHTML = "<b>Admin</b><br/> <input type='checkbox' class='select-adm'> Select All"
       cell5.innerHTML = "<b>Action</b>"
+      return stud_table
+  }
+
+
+  function create_checkbox(user_id, username, chk_flag){
+    chkbox_ele = document.createElement("input")
+    chkbox_ele.type = "checkbox"
+    chkbox_ele.className = "user_mgmt_chk"
+    chkbox_ele.setAttribute('data-user-id',user_id)
+    chkbox_ele.setAttribute('data-user-name',username)
+    if(chk_flag){
+      chkbox_ele.setAttribute('checked',true)
+      chkbox_ele.setAttribute('data-checked-status',true)
+    }
+    return chkbox_ele
   }
 
   $(document).on( 'click', '.search_stud_btn', function (e) {
@@ -105,7 +137,7 @@ table td{
           data = JSON.parse(data)
           if(data.length > 0){
             $("#student_count_div").html("Total "+ data.length+" user(s) found.")
-            create_users_table()
+            stud_table = create_users_table()
 
             var table_body = stud_table.createTBody();
   
@@ -125,36 +157,16 @@ table td{
               action_on_user.innerHTML = "<a>Change Password</a>"
               action_on_user.className = "action_on_user"
 
-
               // Member
-              mem_chk = document.createElement("input")
-              mem_chk.type = "checkbox"
-              mem_chk.className = "user_mgmt_chk"
+              mem_chk = create_checkbox(tuple_obj[0], tuple_obj[1], tuple_obj[2])
               mem_chk.name = "member-chk"
-              mem_chk.setAttribute('data-user-id',tuple_obj[0])
-              mem_chk.setAttribute('data-user-name',tuple_obj[1])
-              if(tuple_obj[2]){
-                mem_chk.setAttribute('checked',true)
-                mem_chk.setAttribute('data-checked-status',true)
-              }
               mem_cell.innerHTML = mem_chk.outerHTML;
 
-
               // Admin
-
-              admin_chk = document.createElement("input")
-              admin_chk.type = "checkbox"
-              admin_chk.className = "user_mgmt_chk"
-              admin_chk.name = "admin-chk"
+              admin_chk = create_checkbox(tuple_obj[0], tuple_obj[1], tuple_obj[3])
               admin_chk.setAttribute('data-user-admin','True')
-              admin_chk.setAttribute('data-user-id',tuple_obj[0])
-              admin_chk.setAttribute('data-user-name',tuple_obj[1])
-              if(tuple_obj[3]){
-                admin_chk.setAttribute('checked',true)
-                admin_chk.setAttribute('data-checked-status',true)
-              }
+              admin_chk.name = "admin-chk"
               admin_cell.innerHTML = admin_chk.outerHTML;
-
 
             })
 
@@ -187,24 +199,82 @@ table td{
     $(".controls-box").addClass("hide")
   })
 
+
   $(document).on("click", ".submit-btn", function() {
-    member_ids = []
-    admin_ids = []
-    $("input[type='checkbox'][name='member-chk']:checked").each(function(){
-        member_ids.push($(this).attr('data-user-id'))
-    })
-    if(admin_ids.length > 0){
-      add_users(JSON.stringify(member_ids), 'False')
-    }
-
-    $("input[type='checkbox'][name='admin-chk']:checked").each(function(){
-        admin_ids.push($(this).attr('data-user-id'))
-    })
-
-    if(admin_ids.length > 0){
-      add_users(JSON.stringify(admin_ids), 'True')
-    }
+      lbl_msg = "Are you sure you want to proceed?"
+      $("#confirmUserSubscriptionModalLabel").text(lbl_msg);
+      $("#confirmUserSubscriptionModal")
+        .removeClass("medium").addClass("small")
+        .addClass("alert")
+      $("#confirmUserSubscriptionModal").foundation('reveal', 'open');
   })
+
+
+  function get_added_user_ids(data_dict){
+        return Object.keys(data_dict['added']).map(function(key){
+            return data_dict['added'][key];
+        });
+  }
+
+  function get_removed_user_ids(data_dict){
+        return Object.keys(data_dict['removed']).map(function(key){
+            return data_dict['removed'][key];
+        });
+  }
+
+  //Confirm or Cancel Deletion
+    $(document).on("click", "#btnConfirmUserSubYes", function() {
+
+        users_to_be_mem = get_added_user_ids(mem_subscription_data)
+        users_to_be_adm = get_added_user_ids(adm_subscription_data)
+
+        users_not_to_be_mem = get_removed_user_ids(mem_subscription_data)
+        users_not_to_be_adm = get_removed_user_ids(adm_subscription_data)
+        // console.log("users_to_be_mem: "+ JSON.stringify(users_to_be_mem))
+        // console.log("users_to_be_adm: "+ JSON.stringify(users_to_be_adm))
+        // console.log("users_not_to_be_mem: "+ JSON.stringify(users_not_to_be_mem))
+        // console.log("users_not_to_be_adm: "+ JSON.stringify(users_not_to_be_adm))
+
+        // Handling Members
+        if(users_to_be_mem.length > 0){
+          add_users(JSON.stringify(users_to_be_mem), 'False')
+        }
+        if(users_not_to_be_mem.length > 0){
+          remove_users(JSON.stringify(users_not_to_be_mem), 'False')
+        }
+
+        // Handling Admins
+
+        if(users_to_be_adm.length > 0){
+          add_users(JSON.stringify(users_to_be_adm), 'True')
+        }
+        if(users_not_to_be_adm.length > 0){
+          remove_users(JSON.stringify(users_not_to_be_adm), 'True')
+        }
+
+        $("#confirmUserSubscriptionModal").foundation('reveal', 'close');
+        update_checkbox_attrs()
+        mem_subscription_data = {'added': {}, 'removed': {}}
+        adm_subscription_data = {'added': {}, 'removed': {}}
+        update_status_lbl()
+    });
+
+
+    function update_checkbox_attrs(){
+      data_dicts = [mem_subscription_data, adm_subscription_data]
+      $.each(data_dicts, function(ind, dict_obj){
+        $.each(dict_obj["added"], function(i,v){
+          $("input[data-user-id=" + v + "]").setAttribute("data-checked-status", true)
+        })
+        $.each(dict_obj["removed"], function(i,v){
+          $("input[data-user-id=" + v + "]").removeAttr("data-checked-status")
+        })
+      })
+    }
+
+    $(document).on("click", "#btnConfirmUserSubNo", function() {
+        $("#confirmUserSubscriptionModal").foundation('reveal', 'close');
+    });
 
   function update_data_and_label(chk_ele){
     subscription_user_type = mem_subscription_data
@@ -238,6 +308,7 @@ table td{
     })
   }
 
+  // Select All In Member column
   $(document).on("click", ".select-mem", function() {
     if($(this).is(":checked")){
       select_all('member-chk')
@@ -247,6 +318,7 @@ table td{
     }
   })
 
+  // Select All In Admin column
   $(document).on("click", ".select-adm", function() {
     if($(this).is(":checked")){
       select_all('admin-chk')
@@ -256,15 +328,18 @@ table td{
     }
   })
 
+  // On change of Checkbox against Member
   $(document).on("click", "input[type=checkbox][name='member-chk']", function() {
     update_data_and_label($(this))
   })
 
 
+  // On change of Checkbox against Admin
   $(document).on("click", "input[type=checkbox][name='admin-chk']", function() {
     update_data_and_label($(this))
   })
 
+  // Generic function to update count labels
   function update_status_lbl(){
     $(".mem-added-cnt").html(Object.keys(mem_subscription_data['added']).length)
     $(".mem-removed-cnt").html(Object.keys(mem_subscription_data['removed']).length)
@@ -313,10 +388,6 @@ table td{
                     .text(grp_mem_count)
                     .attr('value',grp_mem_count)
             }
-            else{
-                console.log("Need to workout")
-            }
-
         }
       }
     });
@@ -330,7 +401,7 @@ table td{
             data:{
                     user_id: user_id,
                     asAdmin: asAdmin,
-                   csrfmiddlewaretoken: '{{ csrf_token }}'
+                    csrfmiddlewaretoken: '{{ csrf_token }}'
               },
             context: this,
             success: function(data) {
@@ -350,9 +421,6 @@ table td{
                         $(".grp_mem_count")
                             .text(grp_mem_count)
                             .attr('value',grp_mem_count)
-                    }
-                    else{
-                        console.log("Need to workout")
                     }
                 }
             }
