font-size class defined.

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -5036,3 +5036,8 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
 .widget-container {
   width: 80%;
 }
+
+/* line 5231, ../../../scss/_clix2017.scss */
+.fs13 {
+  font-size: 13px !important;
+}
